# mlops_sentiment_analysis

./: .gitignore  EDA.ipynb  README.md  dvc.yaml  pyproject.toml  requirements.txt
config/: schema.yaml
notebooks/: 2_Experiment_1_baseline_model.ipynb  3_Experiment_2_BOW_TFIDF.ipynb  4_Experiment_3_TFIDF(1,3)_max_feature_Selection.ipynb  5_Experiment_4_Imbalanced_data_handling.ipynb  6_Experiment_5_XGBoost_with_htp.ipynb  7_Experiment_6_Lightgbm.ipynb  dataset.csv.dvc
src/components/: data_ingestion.py
src/constant/training_pipeline/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/utils/: main_utils.py
