[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-sentiment-analysis"
version = "0.0.1"
description = "An MLOPs project for productionizing sentiment analysis models"
authors = [{name = "Radhika Maheshwari", email = "radhikamaheshwari@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8",
    "wordcloud>=1.9.0",
    "mlflow>=2.0.0",
    "boto3>=1.26.0",
    "awscli>=1.27.0",
    "imbalanced-learn>=0.10.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "dvc>=3.0.0",
    "ipykernel>=6.20.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]